--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/svg+xml" href="{{ '/assets/images/logo.svg' | relative_url }}">
   
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ '/assets/styles/scss/main.scss' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/styles/main.css' | relative_url }}">
   
   <!-- SEO tags -->
   {% seo %}
@@ -32,7 +32,7 @@
       <nav>
         <ul>
           {% for item in site.navigation %}
-            <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+            <li><a href="{{ item.url | relative_url }}">{{ item.title }}</a></li>
           {% endfor %}
           <li><a href="{{ site.github.repository_url }}" target="_blank">GitHub</a></li>
         </ul>
